test/resolver/pass/resolve_import_basic.ms
import { foo } from "module_lib";
const x := foo;
