test/resolver/fail/module_circular_b.ms
import { a_val } from "module_circular_a";
const b_val := 2;
export { b_val };
